<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <LinearLayout android:id="@+id/linearImagefull"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_3pxv"
            android:paddingEnd="@dimen/_11pxh"
            android:paddingStart="@dimen/_11pxh"
            android:paddingTop="@dimen/_3pxv" style="@style/groupStylewhite_A700">
            <FrameLayout android:id="@+id/frameStackarrowleft"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_343pxv" android:layout_width="@dimen/_368pxh">
                <ImageView android:id="@+id/imageImage"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_343pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_rectangle_289}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle_289"/>
                <LinearLayout android:id="@+id/linearColumnarrowleft"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <ImageView android:id="@+id/imageArrowleftOne"
                        android:layout_height="@dimen/_32pxh"
                        android:layout_width="@dimen/_32pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrow_left"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_left"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtWelcomeback"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_21pxh"
                        android:layout_marginTop="@dimen/_108pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{loginVM.loginModel.txtWelcomeback}"
                        style="@style/txtWorkSansbold32" tools:text="@string/lbl_welcome_back"/>
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescription"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:text="@{loginVM.loginModel.txtDescription}"
                        style="@style/txtLatobold14" tools:text="@string/msg_yay_you_re_back"/>
                    <ImageView android:id="@+id/imageLogooneOne"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_59pxh"
                        android:layout_marginTop="@dimen/_33pxv"
                        android:layout_width="@dimen/_70pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_logo_1}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_logo_1"/>
                </LinearLayout>
            </FrameLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtLogin"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_33pxh"
                android:layout_marginTop="@dimen/_47pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtLogin}"
                android:textAllCaps="true"
                style="@style/txtWorkSansbold22" tools:text="@string/lbl_log_in2"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInputfield"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_46pxv"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingEnd="@dimen/_11pxh" android:paddingStart="@dimen/_11pxh">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.07"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtEmail}"
                    android:textAllCaps="true"
                    style="@style/txtMulishextrabold12" tools:text="@string/lbl_email"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_blue_gray_400_radius_8"
                    android:drawablePadding="@dimen/_12pxh"
                    android:drawableStart="@drawable/img_lock"
                    android:ellipsize="end"
                    android:hint="@string/lbl_name_email_com"
                    android:id="@+id/Email" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etEmailValue}"
                    android:textColorHint="@color/blue_gray_400"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInputfield1"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingEnd="@dimen/_11pxh" android:paddingStart="@dimen/_11pxh">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.07"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtPassword}"
                    android:textAllCaps="true"
                    style="@style/txtMulishextrabold12" tools:text="@string/lbl_password"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_blue_gray_400_radius_8"
                    android:drawablePadding="@dimen/_12pxh"
                    android:drawableStart="@drawable/img_trophy"
                    android:ellipsize="end" android:hint="@string/lbl"
                    android:id="@+id/Password"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etPasswordValue}"
                    android:textColorHint="@color/blue_gray_400"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLogIn"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_37pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.06"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@string/lbl_log_in"
                android:textAllCaps="true"
                style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_log_in"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRownotregistere"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_29pxv"
                android:layout_marginEnd="@dimen/_47pxh"
                android:layout_marginStart="@dimen/_61pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:gravity="bottom"
                    android:id="@+id/txtNotregistered"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtNotregistered}"
                    style="@style/txtMulishsemibold16" tools:text="@string/msg_not_registered_yet"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCreateaccount"
                    android:layout_gravity="top"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtCreateaccount}"
                    style="@style/txtMulishbold16" tools:text="@string/lbl_create_account"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
