<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="searchVM" type="com.project.app.modules.search.data.viewmodel.SearchVM"/>
    </data>
    <LinearLayout android:id="@+id/linearSearch"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearTitle"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowleftOne"
                        android:layout_height="@dimen/_32pxh"
                        android:layout_width="@dimen/_32pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrow_left_blue_gray_800"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_left_blue_gray_800"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtFindproducts"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_7pxv"
                        android:layout_marginStart="@dimen/_100pxh"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_3pxh"
                        android:singleLine="true"
                        android:text="@{searchVM.searchModel.txtFindproducts}"
                        style="@style/txtWorkSanssemibold16_1" tools:text="@string/lbl_find_products"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageLogothreeOne"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_59pxh"
                    android:layout_marginStart="@dimen/_38pxh"
                    android:layout_width="@dimen/_70pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_logo_1}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_logo_1"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearColumnsearch"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_7pxh"
            android:paddingStart="@dimen/_7pxh" android:paddingTop="@dimen/_13pxv">
            <androidx.appcompat.widget.SearchView
                android:background="@drawable/rectangle_bg_blue_gray_100_01_radius_8"
                android:gravity="center_horizontal"
                android:id="@+id/searchViewSearch"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_width="match_parent"
                android:theme="@style/searchViewsearch"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"
                app:queryHint="@string/lbl_hoodies" app:searchIcon="@drawable/img_search"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txt6itemsfound"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{searchVM.searchModel.txt6itemsfound}"
                style="@style/txtLatobold14_2" tools:text="@string/msg_6_items_found_for"/>
            <androidx.recyclerview.widget.RecyclerView
                android:gravity="center_horizontal"
                android:id="@+id/recyclerUserprofile"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2" itemSpace="@{@dimen/_22pxh}"
                tools:itemCount="4" tools:listitem="@layout/row_userprofile2"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowwecouldnt"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5pxv"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_86pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:id="@+id/txtWecouldnt"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{searchVM.searchModel.txtWecouldnt}"
                    style="@style/txtWorkSansregular14_1" tools:text="@string/msg_we_couldn_t_find"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLookingfor"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{searchVM.searchModel.txtLookingfor}"
                    style="@style/txtMulishbold14" tools:text="@string/msg_looking_for_another"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
